# dockerswarm.rocks

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-github-actions.txt
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  zizmor.yml
docs/: gitlab-ci.md  index.md  portainer.md  portainer.yml  project-generators.md  release-notes.md  swarm-or-kubernetes.md  swarmpit.md  swarmpit.yml  swarmprom.md  swarmprom.yml  thelounge.md  thelounge.yml  traefik-host-v1.yml  traefik-host.yml  traefik-technical-details.md  traefik-v1.yml  traefik-v3.yml  traefik-with-volume.md  traefik.md  traefik.yml
docs/css/: custom.css
docs/js/: custom.js
docs/traefik-v1/: index.md  traefik-technical-details.md  traefik-with-volume.md  traefik.md
scripts/: clean.sh  deploy_docs_status.py
