[project]
name = "dockerswarm-rocks"
version = "0.1.0"
description = "Docker Swarm mode ideas and tools"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    { include-group = "docs" },
    "prek>=0.3.4",
]
docs = [
    "mkdocs-material==9.7.0",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-redirects>=1.2.1,<1.3.0",
    "pyyaml>=5.3.1,<7.0.0",
    "pillow==12.0.0",
    "cairosvg==2.8.2",
    "mkdocstrings[python]==0.30.1",
    "griffe-typingdoc==0.3.0",
    "griffe-warnings-deprecated==1.1.0",
    "typer==0.21.0",
    "mkdocs-macros-plugin==1.5.0",
    "zensical==0.0.15",
]
github-actions = [
    "PyGithub>=2.3.0,<3.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx>=0.27.0,<0.29.0",
]
