[project]
name = "dockerswarm-rocks"
version = "0.1.0"
description = "Docker Swarm mode ideas and tools"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    { include-group = "docs" },
    "prek>=0.3.13",
]
docs = [
    "mdx-include>=1.4.1,<2.0.0",
    "pyyaml>=5.3.1,<7.0.0",
    "pillow==12.2.0",
    "cairosvg==2.9.0",
    "typer==0.25.1",
    "zensical>=0.0.42",
]
github-actions = [
    "PyGithub>=2.3.0,<3.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "httpx>=0.27.0,<0.29.0",
]
